fixed alignment of users

--- a/style.css
+++ b/style.css
@@ -394,8 +394,8 @@ table tr:hover td {
   margin-top: 10px;
   margin-bottom: 10px;
   /*box-shadow: 5px 5px 5px #8f8f8f;
-  border-radius: 10px;
-  text-align: center;*/
+  border-radius: 10px;*/
+  text-align: center;
 }
 .Users h3{
   margin-right: auto;
